# datacontract-cli

./: .datacontract.env  .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  API.md  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile  Justfile  LICENSE  MANIFEST.in  MCP.md  MIGRATION_PLAN_ODCS.md  Makefile  README.md  REVIEW-PR-1043.md  _config.yml  breaking.go  breaking_test.go  conda_environment.yml  dataContract.go  dataContract_test.go  datacontract.go  datacontract.yaml  datacontract.yml  datacontract_nested_test.yaml  datacontractcli.drawio  datacontractjson.html  dbt_schema.yaml  diff.go  diff_test.go  docker-compose.yml  docs_examples.py  exec.go  export.html  (+44 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: azure-static-web-apps-docs.yml  ci.yaml  codeql.yml  docket-test.yaml  integration.yaml  release.yaml  stale.yaml  waiting-for-response.yml
.soda/: config.yml
_layouts/: default.html
cmd/: datacontract.go
datacontract/: __init__.py  api.py  cli.py  cli_export.py  cli_import.py  command_api.py  command_catalog.py  command_changelog.py  command_ci.py  command_dbt.py  command_edit.py  command_export.py  command_import.py  command_init.py  command_lint.py  command_publish.py  command_test.py  data_contract.py  settings.py  utils.py  web.py  yaml_dump_improvements.py
datacontract/breaking/: breaking.py  breaking_change.py  breaking_rules.py
datacontract/catalog/: catalog.py
datacontract/changelog/: __init__.py  changelog.py  normalize.py
datacontract/checks/: check_jsonschema.py  check_soda_execute.py  check_that_datacontract_contains_valid_servers_configuration.py
datacontract/configuration/: source_config.py
datacontract/editor_assets/: abap-Bs8kvjsq.js  apex-Dspwrl5m.js  azcli-k1BiOau1.js  bat-BIP72KWc.js  bicep-VhQeYhS3.js  cameligo-DnuAXtHg.js  clojure-BAuDPsal.js  coffee-BV06qSnj.js  cpp-Cz8Jeyrf.js  csharp-F6hhlXFb.js  csp-KzlEHCyI.js  css-e4FKntZ3.js  cssMode-BNkTa2xp.js  cypher-CpvDGKRr.js  dart-DdHeFWR0.js  datacontract-editor.css  datacontract-editor.es.js  dockerfile-aoNXDcio.js  ecl-C4Q0DYuA.js  elixir-C9X42b0T.js  flow9-Bff42pfB.js  freemarker2-Dyfzmb5A.js  fsharp-C6vPAsHG.js  go-DEr8zx9f.js  graphql-BiNBBRFh.js  handlebars-BtDNI-uC.js  hcl-2T9lKuFg.js  html-Cn4TGw_o.js  htmlMode-Bf84vbo2.js  index.html  ini-CZGtssYM.js  java-B260NeH3.js  javascript-B86Kac07.js  jsonMode-Ckgg5lAE.js  julia-kuNLM9c5.js  kotlin-Bz6kAefA.js  less-AZUtS89I.js  lexon-BcmgnyRb.js  liquid-D0NPwuu_.js  lua-Dz1RbATg.js  (+48 more)
datacontract/engines/: data_contract_checks.py  data_contract_sql.py  data_contract_test.py
datacontract/export/: __init__.py  avro_converter.py  avro_exporter.py  avro_idl_converter.py  avro_idl_exporter.py  bigquery_converter.py  bigquery_exporter.py  csv_type_converter.py  custom_converter.py  custom_exporter.py  data_caterer_converter.py  data_caterer_exporter.py  dbml_converter.py  dbml_exporter.py  dbt_converter.py  dbt_exporter.py  dcs_exporter.py  dqx_converter.py  dqx_exporter.py  duckdb_type_converter.py  excel_converter.py  excel_exporter.py  exporter.py  exporter_factory.py  go_converter.py  go_exporter.py  great_expectations_converter.py  great_expectations_exporter.py  html_export.py  html_exporter.py  iceberg_converter.py  iceberg_exporter.py  json_type_converter.py  jsonschema_converter.py  jsonschema_exporter.py  markdown_converter.py  markdown_exporter.py  mermaid_export.py  mermaid_exporter.py  odcs_converter.py  (+23 more)
datacontract/import/: sql_importer.py
datacontract/imports/: __init__.py  avro_importer.py  base.py  bigquery_importer.py  csv_importer.py  dbml_importer.py  dbt_importer.py  dcs_importer.py  excel_importer.py  excelservice.kt  glue_importer.py  iceberg_importer.py  importer.py  importer_factory.py  json_importer.py  json_importer_simple.py  jsonschema_importer.py  odcs_helper.py  odcs_importer.py  odcs_v2_importer.py  odcs_v3_importer.py  osi_importer.py  parquet_importer.py  powerbi_importer.py  protobuf_importer.py  registry.py  snowflake_importer.py  spark_dataframe_importer.py  spark_importer.py  sql_importer.py  unity_importer.py
datacontract/init/: download_datacontract_file.py  init_template.py
datacontract/integration/: datamesh_manager.py  dbt_sync.py  dbt_test_mapping.py  entropy_data.py  fetch_resource.py  opentelemetry.py  publish_datamesh_manager.py  publish_opentelemetry.py  semantic_enrichment.py
datacontract/lint/: files.py  lint.py  linters.py  resolve.py  resources.py  result.py  schema.py  urls.py
datacontract/mcp/: __init__.py  connections.py  server.py  sql_utils.py
datacontract/model/: breaking_change.py  breaking_result.py  changelog.py  data_contract_specification.py  exceptions.py  odcs.py  run.py  run_failed_exception.py  server.py
datacontract/output/: ci_output.py  json_test_results.py  junit_test_results.py  output_format.py  test_results_writer.py  (+1 more)
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
examples/: README.md  my-data-contract-id_v0.0.1.yaml  my-data-contract-id_v0.0.2.yaml
tests/: datacontract-1.html  datacontract.yaml  datacontract_20250319182349.yaml  descriptor.pb  test.yaml  test2.yaml  test_api.py  test_bigquery_soda_connection.py  test_breaking.py  test_catalog.py  test_changelog.py  test_changelog_engine.py  test_changelog_normalize.py  test_changelog_output_text.py  test_ci_output.py  test_cli.py  test_connect_databricks.py  test_connect_databricks_virtual_models.py  test_connect_sqlserver.py  test_connect_trino.py  test_convert_rdf.py  test_create_checks_nested.py  test_create_checks_nested_type.py  test_create_checks_physical_type.py  test_create_checks_primary_key.py  test_data_contract.py  test_data_contract_checks.py  test_data_contract_specification.py  test_dbt_sync.py  test_dbt_test_mapping.py  test_documentation_linter.py  test_download_datacontract_file.py  test_dqx_execution.py  test_dtype_category.py  test_duckdb_csv.py  test_duckdb_csv_parameters.py  test_duckdb_json.py  test_edit.py  test_env_vars.py  test_example_model_linter.py  (+192 more)
(+743 files in other folders)
