[project]
name = "datacontract-cli"
version = "0.11.2"
description = "The datacontract CLI is an open source command-line tool for working with Data Contracts. It uses data contract YAML files to lint the data contract, connect to data sources and execute schema and quality tests, detect breaking changes, and export to different formats. The tool is written in Python. It can be used as a standalone CLI tool, in a CI/CD pipeline, or directly as a Python library."
license = "MIT"
readme = "README.md"
authors = [
  { name = "Jochen Christ", email = "jochen.christ@innoq.com" },
  { name = "Stefan Negele", email = "stefan.negele@innoq.com" },
  { name = "Simon Harrer", email = "simon.harrer@innoq.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10,<3.13"
dependencies = [
  "typer>=0.15.1,<0.20",
  "pydantic>=2.8.2,<2.13.0",
  "pyyaml~=6.0.1",
  "requests>=2.31,<2.33",
  "fastjsonschema>=2.19.1,<2.22.0",
  "fastparquet>=2024.5.0,<2025.0.0",
  "numpy>=1.26.4,<2.0.0", # transitive dependency, needs to be <2.0.0 https://github.com/datacontract/datacontract-cli/issues/575
  "python-multipart>=0.0.20,<1.0.0",
  "rich>=13.7,<15.0",
  "sqlglot>=26.6.0,<29.0.0",
  "duckdb>=1.0.0,<1.4.0",
  "soda-core-duckdb>=3.3.20,<3.6.0",
  # remove setuptools when https://github.com/sodadata/soda-core/issues/2091 is resolved
  "setuptools>=60",
  "python-dotenv>=1.0.0,<2.0.0",
  "boto3>=1.34.41,<2.0.0",
  "Jinja2>=3.1.5,<4.0.0",
  "jinja_partials>=0.2.1,<1.0.0",
  "datacontract-specification>=1.2.3,<2.0.0",
  "open-data-contract-standard>=3.1.2,<4.0.0",
]

[project.optional-dependencies]

avro = [
  "avro==1.12.1"
]

bigquery = [
  "soda-core-bigquery>=3.3.20,<3.6.0",
]

csv = [
  "pandas >= 2.0.0",
]

excel = [
  "openpyxl>=3.1.5,<4.0.0",
]


databricks = [
  "soda-core-spark-df>=3.3.20,<3.6.0",
  "soda-core-spark[databricks]>=3.3.20,<3.6.0",
  "databricks-sql-connector>=3.7.0,<4.3.0",
  "databricks-sdk<0.74.0",
  "pyspark>=3.5.5,<5.0.0",
]

iceberg = [
  "pyiceberg==0.10.0"
]

kafka = [
  "datacontract-cli[avro]",
  "soda-core-spark-df>=3.3.20,<3.6.0",
  "pyspark>=3.5.5,<5.0.0",
]

postgres = [
  "soda-core-postgres>=3.3.20,<3.6.0"
]

s3 = [
  "s3fs>=2025.2.0,<2026.0.0",
  "aiobotocore>=2.17.0,<2.26.0",
]

snowflake = [
  "snowflake-connector-python[pandas]>=3.6,<4.2",
  "soda-core-snowflake>=3.3.20,<3.6.0"
]

sqlserver = [
  "soda-core-sqlserver>=3.3.20,<3.6.0"
]

oracle = [
  "soda-core-oracle>=3.3.20,<3.6.0"
]

athena = [
  "soda-core-athena>=3.3.20,<3.6.0"
]

trino = [
  "soda-core-trino>=3.3.20,<3.6.0"
]

dbt = [
  "dbt-core>=1.8.0"
]

dbml = [
  "pydbml>=1.1.1"
]

parquet = [
  "pyarrow>=18.1.0"
]

rdf = [
  "rdflib==7.5.0",
]

api = [
  "fastapi==0.121.2",
  "uvicorn==0.38.0",
]

protobuf = [
  "grpcio-tools>=1.53",
]

all = [
  "datacontract-cli[kafka,bigquery,csv,excel,snowflake,postgres,databricks,sqlserver,s3,athena,trino,dbt,dbml,iceberg,parquet,rdf,api,protobuf,oracle]"
]

# for development, we pin all libraries to an exact version
dev = [
  "datacontract-cli[all]",
  "httpx==0.28.1",
  "kafka-python",
  "minio==7.2.17",  # Pin to 7.2.17 - 7.2.18+ has keyword-only params incompatible with testcontainers
  "moto==5.1.18",
  "pandas>=2.1.0",
  "pre-commit>=3.7.1,<4.6.0",
  "pytest",
  "pytest-xdist",
  "pymssql==2.3.9",
  "ruff",
  "testcontainers[minio,postgres,kafka,mssql]==4.13.3",
  "trino==0.336.0",
]

[project.urls]
Homepage = "https://cli.datacontract.com"
Issues = "https://github.com/datacontract/datacontract-cli/issues"

[project.scripts]
datacontract = "datacontract.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
#addopts = "-n 8" # run tests in parallel, you can disable parallel test execution with "pytest -n0" command
log_level = "INFO"
#log_cli = "true" #  activate live logging, do not use with -n 8 xdist option for parallel test execution: https://github.com/pytest-dev/pytest-xdist/issues/402
log_cli_level = "INFO"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I",   # re-order imports in alphabetic order
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
