[project]
name = "datacontract-cli"
version = "0.12.5"
description = "The datacontract CLI is an open source command-line tool for working with Data Contracts. It uses data contract YAML files to lint the data contract, connect to data sources and execute schema and quality tests, detect breaking changes, and export to different formats. The tool is written in Python. It can be used as a standalone CLI tool, in a CI/CD pipeline, or directly as a Python library."
license = "MIT"
readme = "README.md"
authors = [
  { name = "Jochen Christ", email = "jochen.christ@innoq.com" },
  { name = "Stefan Negele", email = "stefan.negele@innoq.com" },
  { name = "Simon Harrer", email = "simon.harrer@innoq.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10,<3.13"
dependencies = [
  "typer>=0.18.0,<0.26",
  "pydantic>=2.8.2,<2.14.0",
  "pyyaml~=6.0.1",
  "requests>=2.31,<2.35",
  "fastjsonschema>=2.19.1,<2.22.0",
  "jsonschema>=4.23.0,<5.0.0",
  "pytz>=2024.1",
  "python-multipart>=0.0.20,<1.0.0",
  "rich>=13.7,<16.0",
  "sqlglot>=26.6.0,<31.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "boto3>=1.34.41,<2.0.0",
  "Jinja2>=3.1.5,<4.0.0",
  "jinja_partials>=0.2.1,<1.0.0",
  "datacontract-specification>=1.2.3,<2.0.0",
  "open-data-contract-standard>=3.1.2,<4.0.0",
  "deepdiff>=6.0.0,<10.0.0",
  # setuptools provides the distutils shim that soda-core's env_helper.py
  # imports (`from distutils.util import strtobool`). distutils was removed
  # from stdlib in Python 3.12 (and stripped from python-build-standalone
  # 3.11 builds), so without setuptools, soda-core blows up on import.
  # See soda-core#2091. Was previously pulled in transitively via
  # grpcio-tools; required explicitly now that we use external protoc.
  "setuptools>=70",
]

[project.optional-dependencies]

avro = [
  "avro==1.12.1"
]

bigquery = [
  "soda-core-bigquery>=3.3.20,<3.6.0",
]

csv = [
  "pandas >= 2.0.0",
]

excel = [
  "openpyxl>=3.1.5,<4.0.0",
]


databricks = [
  "soda-core-spark-df>=3.3.20,<3.6.0",
  "soda-core-spark[databricks]>=3.3.20,<3.6.0",
  "databricks-sql-connector>=3.7.0,<4.3.0",
  "databricks-sdk<0.112.0",
  "pyspark>=3.5.0,<5.0.0",
]

iceberg = [
  "pyiceberg==0.11.1"
]

kafka = [
  "datacontract-cli[avro]",
  "soda-core-spark-df>=3.3.20,<3.6.0",
  "pyspark>=3.5.0,<5.0.0",
]

mysql = [
  "soda-core-mysql>=3.3.20,<3.6.0",
  "mysql-connector-python>=8.0.30,<9.7.0",
]

postgres = [
  "soda-core-postgres>=3.3.20,<3.6.0"
]

redshift = [
  "soda-core-redshift>=3.3.20,<3.6.0"
]

# DuckDB extension wheels are skipped on Linux/aarch64 — no 1.0.x manylinux2014_aarch64 build exists.
# ARM Linux users fall back to DuckDB's online auto-install (does not work in air-gapped environments)
s3 = [
  "s3fs>=2025.2.0,<2027.0.0",
  "aiobotocore>=2.17.0,<3.8.0",
  'duckdb-extension-httpfs>=1.0.1,<1.1.0; platform_system != "Linux" or platform_machine != "aarch64"',
  'duckdb-extension-aws>=1.0.3,<1.1.0; platform_system != "Linux" or platform_machine != "aarch64"',
]

gcs = [
  "datacontract-cli[duckdb]",
  'duckdb-extension-httpfs>=1.0.1,<1.1.0; platform_system != "Linux" or platform_machine != "aarch64"',
]

azure = [
  "datacontract-cli[duckdb]",
  'duckdb-extension-azure>=1.0.3,<1.1.0; platform_system != "Linux" or platform_machine != "aarch64"',
  "azure-identity>=1.17.1,<1.18",
  "azure-storage-blob>=12.24,<12.30",
]

snowflake = [
  "snowflake-connector-python[pandas]>=3.6,<4.6",
  "soda-core-snowflake>=3.3.20,<3.6.0"
]

sqlserver = [
  "soda-core-sqlserver>=3.3.20,<3.6.0"
]

oracle = [
  "soda-core-oracle>=3.3.20,<3.6.0"
]

athena = [
  "soda-core-athena>=3.3.20,<3.6.0"
]

trino = [
  "soda-core-trino>=3.3.20,<3.6.0"
]

impala = [
  "soda-core-impala>=3.3.20,<3.6.0"
]

dbml = [
  "pydbml>=1.1.1"
]

duckdb = [
  "duckdb>=1.0.0,<1.6.0",
  "soda-core-duckdb>=3.3.20,<3.6.0",
]

parquet = [
  "pyarrow>=18.1.0"
]

rdf = [
  "rdflib==7.6.0",
]

api = [
  "fastapi>=0.115.0,<0.137.0",
  "uvicorn>=0.44.0,<0.49.0",
]

protobuf = [
  # `protoc` (the compiler) must be installed separately on the system; see README.
  # Wide range: only `descriptor_pb2.FileDescriptorSet` is used, stable since 3.x.
  "protobuf>=3.20,<8.0",
]

all = [
  "datacontract-cli[kafka,bigquery,csv,excel,snowflake,postgres,redshift,mysql,databricks,sqlserver,s3,gcs,azure,athena,trino,impala,dbml,duckdb,iceberg,parquet,rdf,api,protobuf,oracle]"
]

# for development, we pin all libraries to an exact version
dev = [
  "datacontract-cli[all]",
  "httpx==0.28.1",
  "kafka-python",
  "minio==7.2.20",  # Pin to 7.2.17 - 7.2.18+ has keyword-only params incompatible with testcontainers
  "moto==5.2.1",
  "pandas>=2.1.0",
  "pre-commit>=3.7.1,<4.7.0",
  "pytest",
  "pytest-xdist",
  "pymssql==2.3.13",
  "ruff==0.15.14",
  "testcontainers[minio,postgres,kafka,mssql,mysql]==4.14.2",
  "trino==0.337.0",
]

[project.urls]
Homepage = "https://cli.datacontract.com"
Issues = "https://github.com/datacontract/datacontract-cli/issues"

[project.scripts]
datacontract = "datacontract.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# soda-core-mysql exact-pins mysql-connector-python==8.0.30 (from 2022),
# which doesn't recognize the charset IDs returned by modern MySQL server
# images (used by our testcontainers-based MySQL tests) and raises
# "Character set 'utf8' unsupported". Override to allow newer
# mysql-connector-python releases that know about the current charsets.
# See: https://github.com/sodadata/soda-core/issues/2515
#
# yarl 1.24.0 and 1.24.1 were published to PyPI with cp310-only wheels and no
# sdist, so `uv sync` fails on Python 3.11/3.12/3.13 ("no wheel for the current
# platform"). The whole 1.24.x line is affected; pin below it (resolves to the
# last good 1.23.0) until a 1.24.x with full wheels is available.
override-dependencies = [
    "mysql-connector-python>=8.0.30,<9.7.0",
    "yarl<1.24",
]

[tool.pytest.ini_options]
#addopts = "-n 8" # run tests in parallel, you can disable parallel test execution with "pytest -n0" command
testpaths = ["tests"]
log_level = "INFO"
#log_cli = "true" #  activate live logging, do not use with -n 8 xdist option for parallel test execution: https://github.com/pytest-dev/pytest-xdist/issues/402
log_cli_level = "INFO"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I",   # re-order imports in alphabetic order
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
