[project]
name = "datacontract-cli"
version = "1.0.0"
description = "The datacontract CLI is an open source command-line tool for working with Data Contracts. It uses data contract YAML files to lint the data contract, connect to data sources and execute schema and quality tests, detect breaking changes, and export to different formats. The tool is written in Python. It can be used as a standalone CLI tool, in a CI/CD pipeline, or directly as a Python library."
license = "MIT"
readme = "README.md"
authors = [
  { name = "Jochen Christ", email = "jochen.christ@innoq.com" },
  { name = "Stefan Negele", email = "stefan.negele@innoq.com" },
  { name = "Simon Harrer", email = "simon.harrer@innoq.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10,<3.15"
dependencies = [
  "typer>=0.18.0,<0.26",
  "pydantic>=2.8.2,<2.14.0",
  "pyyaml~=6.0.1",
  "requests>=2.31,<2.35",
  "fastjsonschema>=2.19.1,<2.22.0",
  "jsonschema>=4.23.0,<5.0.0",
  "pytz>=2024.1",
  "python-multipart>=0.0.20,<1.0.0",
  "rich>=13.7,<16.0",
  "sqlglot>=26.6.0,<31.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "boto3>=1.34.41,<2.0.0",
  "Jinja2>=3.1.5,<4.0.0",
  "jinja_partials>=0.2.1,<1.0.0",
  "datacontract-specification>=1.2.3,<2.0.0",
  "open-data-contract-standard>=3.1.2,<4.0.0",
  "deepdiff>=6.0.0,<10.0.0",
]

[project.optional-dependencies]

avro = [
  "avro==1.12.1"
]

bigquery = [
  "ibis-framework[bigquery]>=10.0.0,<13.0.0",
]

csv = [
  "pandas >= 2.0.0",
]

excel = [
  "openpyxl>=3.1.5,<4.0.0",
]


databricks = [
  "ibis-framework[databricks,pyspark]>=10.0.0,<13.0.0",
  "databricks-sql-connector>=3.7.0,<4.3.0",
  "databricks-sdk<0.116.0",
  # Not capped to Spark 3.5.x like older builds were: the databricks path uses a
  # caller-provided Spark session (or the databricks SQL connector) and never
  # loads the Kafka/Avro connector jars, so it isn't tied to a Scala/Spark line.
  "pyspark>=3.5.0,<5.0.0",
]

iceberg = [
  "pyiceberg==0.11.1"
]

kafka = [
  "datacontract-cli[avro]",
  "ibis-framework[pyspark]>=10.0.0,<13.0.0",
  # kafka.py derives the Kafka/Avro connector jar coordinates (Spark version and
  # Scala binary version) from the installed pyspark at runtime, so both 3.5.x
  # (Scala 2.12) and 4.x (Scala 2.13) work. ibis-framework[pyspark] currently
  # caps pyspark to <4.1, so this resolves to the 4.0.x line.
  "pyspark>=3.5.0,<5.0.0",
]

# MySQL is tested through DuckDB's `mysql` extension (ATTACH), not ibis's
# native MySQL backend, which would require `mysqlclient` (a C extension with no
# macOS/Linux wheels). No Python MySQL driver is needed at runtime; the test
# fixtures' seed driver (mysql-connector-python) lives in the `dev` extra.
mysql = [
  "datacontract-cli[duckdb]",
]

postgres = [
  "ibis-framework[postgres]>=10.0.0,<13.0.0"
]

redshift = [
  # Redshift speaks the postgres wire protocol; ibis has no dedicated backend.
  "ibis-framework[postgres]>=10.0.0,<13.0.0"
]

# DuckDB extension wheels are bundled for air-gapped installs. The 1.5.x line
# publishes wheels for all platforms including manylinux2014_aarch64, so no
# platform markers are needed.
s3 = [
  "s3fs>=2025.2.0,<2027.0.0",
  "duckdb-extension-httpfs>=1.5.0,<1.6.0",
  "duckdb-extension-aws>=1.5.0,<1.6.0",
]

gcs = [
  "datacontract-cli[duckdb]",
  "duckdb-extension-httpfs>=1.5.0,<1.6.0",
]

azure = [
  "datacontract-cli[duckdb]",
  "duckdb-extension-azure>=1.5.0,<1.6.0",
]

snowflake = [
  "snowflake-connector-python[pandas]>=3.6,<4.6",
  "ibis-framework[snowflake]>=10.0.0,<13.0.0"
]

sqlserver = [
  "ibis-framework[mssql]>=10.0.0,<13.0.0"
]

oracle = [
  "ibis-framework[oracle]>=10.0.0,<13.0.0"
]

athena = [
  "ibis-framework[athena]>=10.0.0,<13.0.0"
]

trino = [
  "ibis-framework[trino]>=10.0.0,<13.0.0"
]

impala = [
  "ibis-framework[impala]>=10.0.0,<13.0.0"
]

dbml = [
  "pydbml>=1.1.1"
]

# duckdb must stay in lockstep with the bundled duckdb-extension-* wheels
# (httpfs/aws/azure) used for air-gapped installs, since those extensions are
# built per duckdb version. Both are pinned to the 1.5.x line.
duckdb = [
  "duckdb>=1.5.0,<1.6.0",
  "ibis-framework[duckdb]>=10.0.0,<13.0.0",
]

parquet = [
  "pyarrow>=18.1.0"
]

rdf = [
  "rdflib==7.6.0",
]

api = [
  "fastapi>=0.115.0,<0.137.0",
  "uvicorn>=0.44.0,<0.49.0",
]

protobuf = [
  # Pure-Python .proto parser — no `protoc` system binary or C extension needed.
  "proto-schema-parser>=1.0,<3.0",
]

all = [
  "datacontract-cli[kafka,bigquery,csv,excel,snowflake,postgres,redshift,mysql,databricks,sqlserver,s3,gcs,azure,athena,trino,impala,dbml,duckdb,iceberg,parquet,rdf,api,protobuf,oracle]"
]

# for development, we pin all libraries to an exact version
dev = [
  "datacontract-cli[all]",
  "httpx==0.28.1",
  "kafka-python",
  "minio==7.2.20",  # Pin to 7.2.17 - 7.2.18+ has keyword-only params incompatible with testcontainers
  "moto==5.2.1",
  "pandas>=2.1.0",
  "pre-commit>=3.7.1,<4.7.0",
  "pytest",
  "pytest-xdist",
  "pymssql==2.3.13",
  # psycopg2 / mysql-connector-python are used directly by the postgres / mysql
  # test fixtures to load seed SQL (the engine connects via ibis-postgres'
  # psycopg v3 and DuckDB's mysql extension respectively).
  "psycopg2-binary>=2.9,<3.0",
  "mysql-connector-python>=8.0.30,<9.7.0",
  "ruff==0.15.14",
  "testcontainers[minio,postgres,kafka,mssql,mysql]==4.14.2",
  "trino==0.337.0",
]

[project.urls]
Homepage = "https://cli.datacontract.com"
Issues = "https://github.com/datacontract/datacontract-cli/issues"

[project.scripts]
datacontract = "datacontract.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# yarl 1.24.0 and 1.24.1 were published to PyPI with cp310-only wheels and no
# sdist, so `uv sync` fails on Python 3.11/3.12/3.13 ("no wheel for the current
# platform"). The whole 1.24.x line is affected; pin below it (resolves to the
# last good 1.23.0) until a 1.24.x with full wheels is available.
override-dependencies = [
    "yarl<1.24",
]

[tool.pytest.ini_options]
#addopts = "-n 8" # run tests in parallel, you can disable parallel test execution with "pytest -n0" command
testpaths = ["tests"]
log_level = "INFO"
#log_cli = "true" #  activate live logging, do not use with -n 8 xdist option for parallel test execution: https://github.com/pytest-dev/pytest-xdist/issues/402
log_cli_level = "INFO"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I",   # re-order imports in alphabetic order
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
